[gd_scene load_steps=3 format=2]

[ext_resource path="res://entities/triggers/checkpoint-trigger/checkpoint-trigger.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 265 )

[node name="checkpointTrigger" type="Node2D"]
script = ExtResource( 1 )
type = 2

[node name="checkpointTriggerArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="checkpointTriggerCollider" type="CollisionShape2D" parent="checkpointTriggerArea"]
shape = SubResource( 1 )

[connection signal="body_entered" from="checkpointTriggerArea" to="." method="_on_checkpointTriggerArea_body_entered"]
